; ModuleID = '/home/carl/AnghaBench/linux/net/netlabel/extr_netlabel_cipso_v4.c_netlbl_cipsov4_remove_cb.c'
source_filename = "/home/carl/AnghaBench/linux/net/netlabel/extr_netlabel_cipso_v4.c_netlbl_cipsov4_remove_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netlbl_dom_map = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.netlbl_domhsh_walk_arg = type { i64, i32 }

@NETLBL_NLTYPE_CIPSOV4 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.netlbl_dom_map*, i8*)* @netlbl_cipsov4_remove_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @netlbl_cipsov4_remove_cb(%struct.netlbl_dom_map* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.netlbl_dom_map*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.netlbl_domhsh_walk_arg*, align 8
  store %struct.netlbl_dom_map* %0, %struct.netlbl_dom_map** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.netlbl_domhsh_walk_arg*
  store %struct.netlbl_domhsh_walk_arg* %8, %struct.netlbl_domhsh_walk_arg** %6, align 8
  %9 = load %struct.netlbl_dom_map*, %struct.netlbl_dom_map** %4, align 8
  %10 = getelementptr inbounds %struct.netlbl_dom_map, %struct.netlbl_dom_map* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @NETLBL_NLTYPE_CIPSOV4, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %32

15:                                               ; preds = %2
  %16 = load %struct.netlbl_dom_map*, %struct.netlbl_dom_map** %4, align 8
  %17 = getelementptr inbounds %struct.netlbl_dom_map, %struct.netlbl_dom_map* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.netlbl_domhsh_walk_arg*, %struct.netlbl_domhsh_walk_arg** %6, align 8
  %23 = getelementptr inbounds %struct.netlbl_domhsh_walk_arg, %struct.netlbl_domhsh_walk_arg* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = icmp eq i64 %21, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %15
  %27 = load %struct.netlbl_dom_map*, %struct.netlbl_dom_map** %4, align 8
  %28 = load %struct.netlbl_domhsh_walk_arg*, %struct.netlbl_domhsh_walk_arg** %6, align 8
  %29 = getelementptr inbounds %struct.netlbl_domhsh_walk_arg, %struct.netlbl_domhsh_walk_arg* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @netlbl_domhsh_remove_entry(%struct.netlbl_dom_map* %27, i32 %30)
  store i32 %31, i32* %3, align 4
  br label %33

32:                                               ; preds = %15, %2
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %26
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @netlbl_domhsh_remove_entry(%struct.netlbl_dom_map*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
